apps/talos_cluster/envoy-gateway/gateway_settings.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: envoy-gateway-class
  namespace: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: custom-proxy-config
    namespace: envoy-gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: email-gateway
  namespace: envoy-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  gatewayClassName: envoy-gateway-class
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/access: public
      load-balancer.hetzner.cloud/location: hel1
      load-balancer.hetzner.cloud/name: email-envoy
      load-balancer.hetzner.cloud/use-private-ip: "true"
      load-balancer.hetzner.cloud/uses-proxyprotocol: "true"
  # no wildcards due to Envoy bug: https://github.com/envoyproxy/gateway/issues/2675#issuecomment-1960449002
  listeners:
    - name: smtp
      protocol: TCP
      port: 25
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: All
    - name: submissions
      protocol: TCP
      port: 465
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: All
    - name: submission
      protocol: TCP
      port: 587
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: All
    - name: imap
      protocol: TCP
      port: 143
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: All
    - name: imaps
      protocol: TCP
      port: 993
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  gatewayClassName: envoy-gateway-class
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/access: public
      load-balancer.hetzner.cloud/location: hel1
      load-balancer.hetzner.cloud/name: envoy
      load-balancer.hetzner.cloud/use-private-ip: "true"
      load-balancer.hetzner.cloud/uses-proxyprotocol: "true"
  # no wildcards due to Envoy bug: https://github.com/envoyproxy/gateway/issues/2675#issuecomment-1960449002
  listeners:
    - name: ssh
      protocol: TCP
      port: 22
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: Selector
          selector:
            matchLabels:
              app: cgit
    - name: https-talos-midnightthoughts
      protocol: HTTPS
      hostname: "talos.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: talos.midnightthoughts.space-tls
    - name: https-alertmanager-midnightthoughts
      protocol: HTTPS
      hostname: "alertmanager.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: alertmanager.midnightthoughts.space-tls
    - name: https-prometheus-midnightthoughts
      protocol: HTTPS
      hostname: "prometheus.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: prometheus.midnightthoughts.space-tls
    - name: https-nordgedanken.dev
      protocol: HTTPS
      hostname: "nordgedanken.dev"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: nordgedanken.dev-tls
    - name: https-stalwart-nordgedanken
      protocol: HTTPS
      hostname: "stalwart.nordgedanken.dev"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: stalwart.nordgedanken.dev-tls
    - name: https-webmail-midnightthoughts
      protocol: HTTPS
      hostname: "webmail.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: webmail.midnightthoughts.space-tls
    - name: https-autoconfig-midnightthoughts
      protocol: HTTPS
      hostname: "autoconfig.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: autoconfig.midnightthoughts.space-tls
    - name: https-autodiscover-midnightthoughts
      protocol: HTTPS
      hostname: "autodiscover.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: autodiscover.midnightthoughts.space-tls
    - name: https-autoconfig-lists-midnightthoughts
      protocol: HTTPS
      hostname: "autoconfig.lists.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: autoconfig.lists.midnightthoughts.space-tls
    - name: https-autodiscover-lists-midnightthoughts
      protocol: HTTPS
      hostname: "autodiscover.lists.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: autodiscover.lists.midnightthoughts.space-tls
    - name: https-mta-sts-lists-midnightthoughts
      protocol: HTTPS
      hostname: "mta-sts.lists.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: mta-sts.lists.midnightthoughts.space-tls
    - name: https-wildcard-phorge-mtrnord-blog
      protocol: HTTPS
      hostname: "*.phorge.mtrnord.blog"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard.phorge.mtrnord.blog-tls
    - name: https-openpgpkey.nordgedanken.dev
      protocol: HTTPS
      hostname: "openpgpkey.nordgedanken.dev"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: openpgpkey.nordgedanken.dev-tls
    - name: https-midnightthoughts-auth
      protocol: HTTPS
      hostname: "auth.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: auth.midnightthoughts.space-tls
    - name: https-midnightthoughts-clickstack
      protocol: HTTPS
      hostname: "clickstack.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: clickstack.midnightthoughts.space-tls
    - name: https-midnightthoughts-grafana
      protocol: HTTPS
      hostname: "grafana.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: grafana.midnightthoughts.space-tls
    - name: https-draupnir-midnightthoughts
      protocol: HTTPS
      hostname: "draupnir.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: draupnir.midnightthoughts.space-tls
    - name: https-matrix-draupnir-midnightthoughts
      protocol: HTTPS
      hostname: "matrix.draupnir.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: matrix.draupnir.midnightthoughts.space-tls
    - name: https-midnightthoughts-vault
      protocol: HTTPS
      hostname: "vault.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: vault.midnightthoughts.space-tls
    - name: https-midnightthoughts-budget
      protocol: HTTPS
      hostname: "budget.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: budget.midnightthoughts.space-tls
    - name: https-midnightthoughts-ldap
      protocol: HTTPS
      hostname: "ldap.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: ldap.midnightthoughts.space-tls
    - name: https-midnightthoughts-persephone
      protocol: HTTPS
      hostname: "persephone.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: persephone.midnightthoughts.space-tls
    - name: https-midnightthoughts-persephone-matrix
      protocol: HTTPS
      hostname: "matrix.persephone.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: matrix.persephone.midnightthoughts.space-tls
    - name: ldap
      protocol: TCP
      port: 389
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: Selector
          selector:
            matchLabels:
              app: authentik
    - name: https-wildcard-mtrnord-blog
      protocol: HTTPS
      hostname: "*.mtrnord.blog"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard.mtrnord.blog-tls
    - name: https-wildcard-convex-mtrnord-blog
      protocol: HTTPS
      hostname: "*.convex.mtrnord.blog"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard.convex.mtrnord.blog-tls
    - name: https-midnightthoughts-collabora
      protocol: HTTPS
      hostname: "collabora.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: collabora.midnightthoughts.space
    - name: https-midnightthoughts-webhook-kubernetes
      protocol: HTTPS
      hostname: "webhook.kubernetes.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: webhook.kubernetes.midnightthoughts.space-tls
    - name: https-wildcard-connectivity-tester-mtrnord-blog
      protocol: HTTPS
      hostname: "*.connectivity-tester.mtrnord.blog"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard.connectivity-tester.mtrnord.blog-tls
    - name: https-wildcard-stage-connectivity-tester-mtrnord-blog
      protocol: HTTPS
      hostname: "*.stage.connectivity-tester.mtrnord.blog"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard.stage.connectivity-tester.mtrnord.blog-tls
    - name: https-mtrnord-blog-root
      protocol: HTTPS
      hostname: "mtrnord.blog"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: mtrnord.blog-tls
    - name: https-midnightthoughts-rspamd
      protocol: HTTPS
      hostname: "rspamd.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: rspamd.midnightthoughts.space-tls
    - name: https-midnightthoughts-plane
      protocol: HTTPS
      hostname: "plane.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: plane.midnightthoughts.space
    - name: https-midnightthoughts-kimai
      protocol: HTTPS
      hostname: "kimai.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: kimai.midnightthoughts.space
    - name: https-midnightthoughts-morg-statistics
      protocol: HTTPS
      hostname: "morg-statistics.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: morg-statistics.midnightthoughts.space
    - name: https-midnightthoughts-mta-sts
      protocol: HTTPS
      hostname: "mta-sts.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: mta-sts.midnightthoughts.space
    - name: https-midnightthoughts-lists
      protocol: HTTPS
      hostname: "lists.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: lists.midnightthoughts.space
    - name: https-midnightthoughts-git
      protocol: HTTPS
      hostname: "git.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: git.midnightthoughts.space
    - name: https-midnightthoughts-git-ci
      protocol: HTTPS
      hostname: "ci.git.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: ci.git.midnightthoughts.space
    - name: https-midnightthoughts-plausible
      protocol: HTTPS
      hostname: "plausible.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: plausible.midnightthoughts.space
    - name: https-midnightthoughts-miro
      protocol: HTTPS
      hostname: "miro-export.neoboard.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: miro-export.neoboard.midnightthoughts.space
    - name: https-midnightthoughts-miro-exporter
      protocol: HTTPS
      hostname: "miro-exporter.neoboard.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: miro-exporter.neoboard.midnightthoughts.space
    - name: https-midnightthoughts-miro-neoboard-exporter
      protocol: HTTPS
      hostname: "miro-neoboard-exporter.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: miro-neoboard-exporter.midnightthoughts.space
    - name: https-opencost-k8s-midnightthoughts-space
      protocol: HTTPS
      hostname: "opencost.k8s.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: opencost.k8s.midnightthoughts.space-tls
    - name: https-registry-midnightthoughts
      protocol: HTTPS
      hostname: "registry.midnightthoughts.space"
      port: 443
      allowedRoutes:
        namespaces:
          from: "All"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: registry.midnightthoughts.space-tls
    - name: https-jenkins-midnightthoughts
      protocol: HTTPS
      hostname: jenkins.midnightthoughts.space
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: jenkins.midnightthoughts.space-tls
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: "Same"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
  namespace: envoy-gateway
spec:
  parentRefs:
    - name: envoy-gateway
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
# Monitors the above gateway using a servicemonitor
# First we do a service matching on the labels "gateway.envoyproxy.io/owning-gateway-name: envoy-gateway" and "gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway"
kind: Service
apiVersion: v1
metadata:
  name: envoy-gateway-monitor
  namespace: envoy-gateway
  labels:
    proxy: envoy
spec:
  selector:
    gateway.envoyproxy.io/owning-gateway-name: envoy-gateway
    gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
  ports:
    - name: metrics
      port: 19001
      targetPort: 19001
